--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -7,8 +7,8 @@
     <title>
         {% block title %} {% endblock %}
     </title>
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">-->
-    <link rel="stylesheet" href="static/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+<!--    <link rel="stylesheet" href="static/css/bootstrap.css">-->
     <link rel="stylesheet" href="static/css/style.css">
     <link rel="shortcut icon" href="{{ url_for('static', filename='basketball.ico') }}">
 </head>
@@ -23,12 +23,12 @@
                     <a class="nav-link active link-dark" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item text-dark">
-                    <a class="nav-link link-dark" href="#">Sport</a>
+                    <a class="nav-link link-dark" href="./sports">Sport</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link link-dark" href="./about">About Tevisa</a>
                 </li>
-                </li>
+
                 <li class="nav-item">
                     <a class="nav-link link-dark" href="./inst_registration">Registraion</a>
                 </li>
@@ -46,9 +46,9 @@
 
 </body>
 <!-- CDN bootstrap js-->
-<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- FILE bootstrap js-->
-<script src="static/js/bootstrap.js"></script>
+<!--<script src="static/js/bootstrap.js"></script>-->
 
 </html>
