--- a/templates/public/team_register.html
+++ b/templates/public/team_register.html
@@ -23,18 +23,23 @@
 
 <div class="container d-flex justify-content-center">
     <form action="#" class="border p-5" method="post">
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        {{ message }}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    </div>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+
         <div class="mb-3">
             <label for="instName" class="form-label">Institution Name:</label>
             <select class="form-select" name="Institution" id="instName" required>
-                <option value="ZUT">Zambia University College of Technology</option>
-                <option value="MUKUBA" class="input-bar">Mukuba University</option>
-                <option value="UNZA" class="input-bar">University of Zambia</option>
-                <option value="CBU" class="input-bar">Copperbelt University</option>
-                <option value="MU" class="input-bar">Mulungushi University</option>
-                <option value="UNILUS" class="input-bar">University of Lusaka</option>
-                <option value="LMMU" class="input-bar">Levy Mwanawasa Medical University</option>
-                <option value="EHC" class="input-bar">Evelyn Hone College</option>
-                <option value="BAOBAB" class="input-bar">Baobab College</option>
+                {% for key, value in INSTITUTIONS.items() %}
+                    <option value="{{ key }}">{{ value }}</option>
+                {% endfor %}
             </select>
         </div>
         <div class="mb-3">
@@ -52,6 +57,7 @@
             <label for="tournament" class="form-label">Tournament:</label>
             <input type="text" id="tournament" value="TEST TOURNAMENT" class="form-control" name="tournament" required>
         </div>
+
         <div class="d-flex justify-content-center">
             <input type="submit" value="Next" class="px-5 btn btn-dark">
         </div>
