--- a/templates/public/team_register.html
+++ b/templates/public/team_register.html
@@ -40,6 +40,7 @@
         <div class="mb-3">
             <label for="instName" class="form-label">Institution Name:</label>
             <select class="form-select" name="Institution" id="instName" required>
+                <option value="" disabled selected>Institution team belongs to</option>
                 {% for key, value in INSTITUTIONS.items() %}
                     <option value="{{ key }}">{{ value }}</option>
                 {% endfor %}
@@ -58,7 +59,15 @@
         <div class="mb-3">
             <!--  User select -> From Registered Team -->
             <label for="tournament" class="form-label">Tournament:</label>
-            <input type="text" id="tournament" value="TEST TOURNAMENT" class="form-control" name="tournament" required>
+<!--            <input type="text" id="tournament" value="TEST TOURNAMENT" class="form-control" name="tournament" required>-->
+
+            <select class="form-control form-select" id="tournament" name="tournament" required>
+                <option value="" disabled selected>Select a tournament</option>
+                {% for tournament in tournaments %}
+                    <option value="{{ tournament.name }}">{{ tournament.name }}</option>
+                {% endfor %}
+            </select>
+
         </div>
 
         <div class="d-flex justify-content-center">
