--- a/templates/admin/manage_scores.html
+++ b/templates/admin/manage_scores.html
@@ -1,10 +1,10 @@
 {% extends "admin/admin_base.html" %}
 
-{% block title %}Manage Fixtures{% endblock %}
+{% block title %}Manage Scores{% endblock %}
+
+{% block scores %}selected{% endblock %}
 
 {% block content %}
-
-
 
 <div class="container mt-5">
     <h1 class="text-center">Manage Game Scores</h1>
